--- a/docs/config.json
+++ b/docs/config.json
@@ -1,1 +1,1 @@
-{"20180530":{"sourceIndex":6,"sourceList":["30-1.jpg","30-2.jpg","30-3.jpg","30-4.jpg","30-5.jpg","30-6.jpg"],"htmlVersion":1}}
+{"20180530":{"sourceIndex":6,"sourceList":["30-1.jpg","30-2.jpg","30-3.jpg","30-4.jpg","30-5.jpg","30-6.jpg"],"htmlVersion":1},"20180612":{"sourceIndex":18,"sourceList":["12-1.jpg","12-2.jpg","12-3.jpg","12-4.jpg","12-5.jpg","12-6.jpg","12-7.jpg","12-8.jpg","12-9.jpg","12-10.jpg","12-11.jpg","12-12.jpg","12-13.jpg","12-14.jpg","12-15.jpg","12-16.jpg","12-17.jpg","12-18.jpg"],"htmlVersion":2}}
